--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ data/
 __pycache__/
 dashboard_testing.py
 discarded_code
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
